[package]
name = "idasen-desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
btleplug = { version = "0.9.0", features = ["serde"] }
rand = "0.8.4"
futures = "0.3.19"
byteorder = "1.4.3"
uuid = "0.8.2"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"